Fix welcome page layout spacing

--- a/static/styles.css
+++ b/static/styles.css
@@ -72,3 +72,7 @@ nav {
 .home-lightbulb-pic {
   max-width: 60%;
 }
+
+.testing {
+  align-items: center;
+}
